# rust-server

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
src/models/: company.rs
