[package]
name = "rust-starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
# seralisation
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.104"

tokio = { version = "1.29.1", features = ["full"] }

# logging
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
log = "0.4"
fast_log = "1.6"

# database related
rbs = { version = "4.5" }
rbatis = { version = "4.5" }
rbdc-pg = { version = "4.5" }
fake = { version = "2.9.1", features = ["derive"] }
cuid = "1.3.2"
